--- a/luoquanhong/kustomization.yaml
+++ b/luoquanhong/kustomization.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m0s
-  path: ./kustomize
+  path: ./luoquanhong
   prune: true
   sourceRef:
     kind: GitRepository
