--- a/luoquanhong/kustomization.yaml
+++ b/luoquanhong/kustomization.yaml
@@ -4,7 +4,7 @@ metadata:
   name: springstudy
   namespace: flux-system
 spec:
-  interval: 5m0s
+  interval: 10s
   path: ./luoquanhong
   prune: true
   sourceRef:
